--- a/server/package.json
+++ b/server/package.json
@@ -100,9 +100,7 @@
         "xss": "^1.0.10",
         "yallist": "^4.0.0",
         "yn": "^3.1.1",
-        "yup": "^0.32.11"
-    },
-    "devDependencies": {
+        "yup": "^0.32.11",
         "@babel/register": "^7.17.0",
         "@types/bcrypt": "^5.0.0",
         "@types/express": "^4.17.13",
