--- a/client/package.json
+++ b/client/package.json
@@ -37,9 +37,7 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.27.1",
     "ts-node": "^10.6.0",
-    "yup": "^0.32.11"
-  },
-  "devDependencies": {
+    "yup": "^0.32.11",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@types/jest": "^27.4.1",
